# DieHanded

./: CMakeLists.txt  DieHanded.sln  DieHanded.vcxproj  DieHanded.vcxproj.filters  README.md  basicData.cpp  basicData.h  biomes.cpp  biomes.h  build.cpp  build.h  gear.cpp  gear.h  list_tests.txt  main.cpp  mut.cpp  mut.h  params.hcfg  params.json  resource.h  results.txt
benchmarks_results/: python-benchmark-5-1111-R11.txt  results-0-0000-R01.txt  results-0-1000-R00.txt  results-0-1100-R00.txt  results-0-1100-R01.txt  results-0-1110-100.txt  results-0-1110-101.txt  results-0-1111-000.txt  results-0-1111-001.txt  results-0-1111-010.txt  results-0-1111-011.txt  results-0-1111-100.txt  results-0-1111-R00.txt  results-3-1111-010.txt  results-5-1111-R11.txt
data/: biomes.dhd  biomes.xml  diets.dhd  diets.xml  gear.dhd  gear.xml  muts.dhd  muts.xml  outfits.dhd  outfits.xml  runes.xml  stats.xml
lang/: en.xml  fr.xml
